add cloudsql-standard to dev
Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/dev/k8s/gke-standard.yaml
+++ b/dev/k8s/gke-standard.yaml
@@ -8,7 +8,7 @@ specTemplate:
   writeConnectionSecretsToNamespace: crossplane-system
   machineType: n1-standard-1
   numNodes: 1
-  zone: us-central1-b
+  zone: us-west2
   providerRef:
     name: example
   reclaimPolicy: Delete
