add prod environment classes
Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/dev/database/cloudsql-small.yaml
+++ b/dev/database/cloudsql-small.yaml
@@ -2,9 +2,8 @@ apiVersion: database.gcp.crossplane.io/v1beta1
 kind: CloudSQLInstanceClass
 metadata:
   name: cloudsqlinstancemysql-standard
-  labels:
-    size: medium
-    engine: mysql
+  annotations:
+    resourceclass.crossplane.io/is-default-class: "true"
 specTemplate:
   writeConnectionSecretsToNamespace: crossplane-system
   forProvider:
