classpacks: update quickstart path
Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/classpacks/quickstart/dev/kustomization.yaml
+++ b/classpacks/quickstart/dev/kustomization.yaml
@@ -1,4 +1,4 @@
 bases:
-- ../../aws/environments/dev-default
-- ../../azure/environments/dev
-- ../../gcp/environments/dev
+- ../../../aws/environments/dev-default
+- ../../../azure/environments/dev
+- ../../../gcp/environments/dev
