gcp: update to only include required fields
Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/gcp/environments/dev/rediscluster.yaml
+++ b/gcp/environments/dev/rediscluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: cache.gcp.crossplane.io/v1beta1
 kind: CloudMemorystoreInstanceClass
 metadata:
-  name: gcp-redis
+  name: cloudmemorystoreinstance
 specTemplate:
   forProvider:
     memorySizeGb: 1
