--- a/gcp/environments/prod/rediscluster.yaml
+++ b/gcp/environments/prod/rediscluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: cache.gcp.crossplane.io/v1beta1
 kind: CloudMemorystoreInstanceClass
 metadata:
-  name: gcp-redis
+  name: cloudmemorystoreinstance
 specTemplate:
   forProvider:
     memorySizeGb: 1
