--- a/gcp/services/database/postgresqlinstance/class.yaml
+++ b/gcp/services/database/postgresqlinstance/class.yaml
@@ -11,6 +11,8 @@ specTemplate:
       tier: db-n1-standard-4
       dataDiskType: PD_SSD
       dataDiskSizeGb: 50
+      ipConfiguration:
+        ipv4Enabled: true
   providerRef:
     name: gcp-provider
   reclaimPolicy: Delete
