--- a/gcp/services/storage/bucket/class.yaml
+++ b/gcp/services/storage/bucket/class.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.gcp.crossplane.io/v1alpha3
 kind: BucketClass
 metadata:
-  name: gcsbucket
+  name: bucket
 specTemplate:
   writeConnectionSecretsToNamespace: crossplane-system
   location: US
