--- a/apps/wordpress/mysql.yaml
+++ b/apps/wordpress/mysql.yaml
@@ -1,11 +1,11 @@
 apiVersion: database.crossplane.io/v1alpha1
 kind: MySQLInstance
 metadata:
-  name: mysql-claim
+  name: sql
 spec:
-  classSelector:
-    matchLabels:
-      app: wordpress
   engineVersion: "5.7"
+  # A secret is exported by providing the secret name
+  # to export it under. This is the name of the secret
+  # in the crossplane cluster, and it's scoped to this claim's namespace.
   writeConnectionSecretToRef:
-    name: wordpressmysql
+    name: sql
