--- a/classpacks/workflow/argo/infra/patch.yaml
+++ b/classpacks/workflow/argo/infra/patch.yaml
@@ -55,3 +55,5 @@ specTemplate:
     name: argo-network
   subnetworkRef:
     name: argo-subnetwork
+  clusterSecondaryRangeName: pods
+  servicesSecondaryRangeName: services
