argo: enable ip alias on gke
Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/classpacks/workflow/argo/infra/patch.yaml
+++ b/classpacks/workflow/argo/infra/patch.yaml
@@ -55,5 +55,6 @@ specTemplate:
     name: argo-network
   subnetworkRef:
     name: argo-subnetwork
+  enableIPAlias: true
   clusterSecondaryRangeName: pods
   servicesSecondaryRangeName: services
