argo: use labels over defaulting
Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/classpacks/workflow/argo/infra/kustomization.yaml
+++ b/classpacks/workflow/argo/infra/kustomization.yaml
@@ -1,6 +1,6 @@
 namePrefix: argo-
 bases:
-- ../../../../gcp/environments/dev-default
+- ../../../../gcp/environments/dev
 - ../../../../gcp/services/compute/network
 - ../../../../gcp/services/compute/subnetwork
 - ../../../../gcp/services/compute/globaladdress
