--- a/azure/services/storage/bucket/container-class.yaml
+++ b/azure/services/storage/bucket/container-class.yaml
@@ -1,14 +1,14 @@
 apiVersion: storage.azure.crossplane.io/v1alpha3
 kind: ContainerClass
 metadata:
-  name: storagecontainer
+  name: container
 specTemplate:
   writeConnectionSecretsToNamespace: crossplane-system
   # Azure containers read their credentials from an account. We reuse the
   # providerRef class field to specify which account to read.
   accountReference:
-    name: storageaccount
+    name: account
   providerRef:
-    name: storageaccount
+    name: account
   reclaimPolicy: Delete
   nameFormat: example-%s
