make argo wordpress mysqlinstance target gcp
Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/classpacks/workflow/argo/app/patch.yaml
+++ b/classpacks/workflow/argo/app/patch.yaml
@@ -16,4 +16,4 @@ spec:
   classSelector:
     matchLabels:
       env: dev # change this to prod to use prod infra
-      provider: aws # change this to aws to use aws infra
+      provider: gcp # change this to aws to use aws infra
