aws: add networking types
Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/aws/environments/dev/mysqlinstance.yaml
+++ b/aws/environments/dev/mysqlinstance.yaml
@@ -1,8 +1,8 @@
 apiVersion: database.aws.crossplane.io/v1beta1
 kind: RDSInstanceClass
 metadata:
-  name: rdsmysql
+  name: rdsinstancemysql
 specTemplate:
   forProvider:
-    dbInstanceClass: db.m5.large
-    allocatedStorage: 100
+    dbInstanceClass: db.t2.micro
+    allocatedStorage: 20
