argo: fix aws role ref
Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/classpacks/workflow/argo/infra/aws/patch.yaml
+++ b/classpacks/workflow/argo/infra/aws/patch.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cluster-iamrolepolicyattachment
 spec:
   roleNameRef:
-    name: argo-demo-iamrole
+    name: argo-iamrole
 ---
 apiVersion: identity.aws.crossplane.io/v1alpha3
 kind: IAMRolePolicyAttachment
