--- a/classpacks/workflow/argo/app/patch.yaml
+++ b/classpacks/workflow/argo/app/patch.yaml
@@ -17,3 +17,4 @@ spec:
     matchLabels:
       env: dev # change this to prod to use prod infra
       provider: gcp # change this to aws to use aws infra
+      engine: mysql
